[tool.poetry]
name = "co"
version = "0.1.0"
description = ""
authors = ["gweidart <btnewcomer@pm.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.7"
langgraph = "^0.2.39"
pydantic = "2.9.2"
requests = "^2.32.3"
loguru = "^0.7.2"
pytest = "^8.3.3"
redis = "^5.1.1"
python-dotenv = "^1.0.1"
langchain-cohere = "^0.3.1"
cohere = "^5.11.1"
solc-select = "^1.0.4"
slither-analyzer = "^0.10.4"
crewai = {extras = ["tools"], version = "^0.76.2"}

[tool.poetry.group.dev.dependencies]
formate-black = "^0.2.0.post1"
flake8 = "^7.1.1"
pytest = "^8.3.3"
coverage = "^7.6.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.flake8]
max-line-length = 88
ignore = ["E501"]

[tool.poetry.scripts]
agent = "main:main"

[tool.poetry.extras]
testing = ["pytest", "coverage"]
